# idntag

./: .travis.yml  Brewfile  CMakeLists.txt  LICENSE  README.md  genman.sh  idntag  idntag.1  make.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: macos.yml
etc/: uncrustify.cfg
src/: acoustid.cpp  acoustid.h  editor.cpp  editor.h  idntag.1  log.cpp  log.h  main.cpp  main.h  tag.cpp  tag.h  util.cpp  util.h  version.cpp  version.h
tests/: test001  test002  test003  test004  test005  test006  test007
